--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,3 +13,11 @@
 * {
   font-family: 'roboto';
 }
+
+.material-symbols-rounded {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
